[package]
name = "imago"
version = "0.1.0"
authors = ["Justus K <justus.k@protonmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
uuid = { version = "0.8.1", features = ["serde"] }
image = "0.23.8"

actix-web = "2.0.0"
actix-rt = "1.1.1"
awc = "1.0.1"

eyre = "0.6.0"
itconfig = "1.0"
serde_json = "1.0.57"
log = "0.4.11"
